hphp/test/quick/this-type.php.expectf

Fatal error: $this is null in %s/test/quick/this-type.php on line 4